plugin/jvm/src/main/java/com/twosigma/beaker/autocomplete/groovy/GroovyParser.java
// Generated from GroovyParser.g4 by ANTLR 4.3
package com.twosigma.beaker.autocomplete.groovy;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GroovyParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		MINUS=91, GSTRING_START=10, KW_INTERFACE=18, MULT=87, SEMICOLON=76, CLOSURE_ARG_SEPARATOR=55, 
		KW_THROW=44, PLUS_ASSIGN=68, LPAREN=3, KW_CONTINUE=38, DOT=77, KW_CATCH=42, 
		BAND=92, BNOT=86, KW_IMPORT=21, KW_NULL=25, AT=79, LBRACK=5, XOR=93, KW_FALSE=27, 
		RUSHIFT_ASSIGN=46, RSHIFT_ASSIGN=47, KW_STRICTFP=105, KW_WHILE=34, ASSIGN=80, 
		KW_PACKAGE=20, KW_BREAK=39, ORANGE=61, KW_CASE=36, COMMA=78, BAND_ASSIGN=73, 
		KW_DEF=24, ATTR_DOT=52, UNEQUAL=63, KW_ELSE=33, SPACESHIP=49, POWER=58, 
		MINUS_ASSIGN=69, DIV=88, INCREMENT=57, RCURVE=8, KW_VOLATILE=103, STRING=9, 
		KW_DEFAULT=37, KW_RETURN=40, BOR_ASSIGN=75, LT=81, DECIMAL=15, LCURVE=7, 
		KW_TRANSIENT=101, KW_FINAL=100, DECREMENT=56, KW_IN=30, KW_INSTANCEOF=96, 
		GSTRING_PATH_PART=13, KW_NATIVE=102, SAFE_DOT=50, SLASHY_GSTRING_END=109, 
		KW_IMPLEMENTS=23, KW_IF=32, FIND=65, STAR_DOT=51, INTEGER=16, BOR=84, 
		IGNORE_NEWLINE=106, KW_FOR=31, VISIBILITY_MODIFIER=97, RPAREN=4, KW_AS=95, 
		MULT_ASSIGN=70, KW_ENUM=19, RBRACK=6, NOT=85, GSTRING_END=11, AND=66, 
		KW_TRY=41, LTE=53, NL=107, RANGE=60, PLUS=90, KW_STATIC=99, DIV_ASSIGN=71, 
		KW_SUPER=29, SHEBANG_COMMENT=1, KW_TRUE=26, QUESTION=94, KW_FINALLY=43, 
		ROLLBACK_ONE=14, LSHIFT_ASSIGN=48, IDENTIFIER=108, WS=2, KW_NEW=28, KW_ABSTRACT=98, 
		KW_CLASS=17, OR=67, XOR_ASSIGN=74, MOD=89, EQUAL=62, KW_EXTENDS=22, GSTRING_PART=12, 
		COLON=83, GT=82, MOD_ASSIGN=72, LSHIFT=59, KW_SWITCH=35, KW_THROWS=45, 
		GTE=54, KW_SYNCHRONIZED=104, MATCH=64;
	public static final String[] tokenNames = {
		"<INVALID>", "SHEBANG_COMMENT", "WS", "LPAREN", "RPAREN", "LBRACK", "RBRACK", 
		"LCURVE", "RCURVE", "STRING", "GSTRING_START", "'\"'", "'$'", "GSTRING_PATH_PART", 
		"ROLLBACK_ONE", "DECIMAL", "INTEGER", "'class'", "'interface'", "'enum'", 
		"'package'", "'import'", "'extends'", "'implements'", "'def'", "'null'", 
		"'true'", "'false'", "'new'", "'super'", "'in'", "'for'", "'if'", "'else'", 
		"'while'", "'switch'", "'case'", "'default'", "'continue'", "'break'", 
		"'return'", "'try'", "'catch'", "'finally'", "'throw'", "'throws'", "'>>>='", 
		"'>>='", "'<<='", "'<=>'", "'?.'", "'*.'", "'.@'", "'<='", "'>='", "'->'", 
		"'--'", "'++'", "'**'", "'<<'", "'..'", "'..<'", "'=='", "'!='", "'==~'", 
		"'=~'", "'&&'", "'||'", "'+='", "'-='", "'*='", "'/='", "'%='", "'&='", 
		"'^='", "'|='", "';'", "'.'", "','", "'@'", "'='", "'<'", "'>'", "':'", 
		"'|'", "'!'", "'~'", "'*'", "DIV", "'%'", "'+'", "'-'", "'&'", "'^'", 
		"'?'", "'as'", "'instanceof'", "VISIBILITY_MODIFIER", "'abstract'", "'static'", 
		"'final'", "'transient'", "'native'", "'volatile'", "'synchronized'", 
		"'strictfp'", "IGNORE_NEWLINE", "NL", "IDENTIFIER", "SLASHY_GSTRING_END"
	};
	public static final int
		RULE_compilationUnit = 0, RULE_packageDefinition = 1, RULE_importStatement = 2, 
		RULE_classDeclaration = 3, RULE_enumDeclaration = 4, RULE_classMember = 5, 
		RULE_enumMember = 6, RULE_implementsClause = 7, RULE_extendsClause = 8, 
		RULE_methodDeclaration = 9, RULE_methodBody = 10, RULE_fieldDeclaration = 11, 
		RULE_constructorDeclaration = 12, RULE_objectInitializer = 13, RULE_classInitializer = 14, 
		RULE_typeDeclaration = 15, RULE_annotationClause = 16, RULE_annotationElementPair = 17, 
		RULE_annotationElement = 18, RULE_genericDeclarationList = 19, RULE_genericsDeclarationElement = 20, 
		RULE_throwsClause = 21, RULE_argumentDeclarationList = 22, RULE_argumentDeclaration = 23, 
		RULE_blockStatement = 24, RULE_declarationRule = 25, RULE_newInstanceRule = 26, 
		RULE_newArrayRule = 27, RULE_classBody = 28, RULE_statement = 29, RULE_statementBlock = 30, 
		RULE_tryBlock = 31, RULE_catchBlock = 32, RULE_finallyBlock = 33, RULE_caseStatement = 34, 
		RULE_cmdExpressionRule = 35, RULE_pathExpression = 36, RULE_gstringPathExpression = 37, 
		RULE_closureExpressionRule = 38, RULE_gstring = 39, RULE_annotationParameter = 40, 
		RULE_expression = 41, RULE_classNameExpression = 42, RULE_genericClassNameExpression = 43, 
		RULE_genericList = 44, RULE_genericListElement = 45, RULE_mapEntry = 46, 
		RULE_classModifier = 47, RULE_memberModifier = 48, RULE_argumentList = 49;
	public static final String[] ruleNames = {
		"compilationUnit", "packageDefinition", "importStatement", "classDeclaration", 
		"enumDeclaration", "classMember", "enumMember", "implementsClause", "extendsClause", 
		"methodDeclaration", "methodBody", "fieldDeclaration", "constructorDeclaration", 
		"objectInitializer", "classInitializer", "typeDeclaration", "annotationClause", 
		"annotationElementPair", "annotationElement", "genericDeclarationList", 
		"genericsDeclarationElement", "throwsClause", "argumentDeclarationList", 
		"argumentDeclaration", "blockStatement", "declarationRule", "newInstanceRule", 
		"newArrayRule", "classBody", "statement", "statementBlock", "tryBlock", 
		"catchBlock", "finallyBlock", "caseStatement", "cmdExpressionRule", "pathExpression", 
		"gstringPathExpression", "closureExpressionRule", "gstring", "annotationParameter", 
		"expression", "classNameExpression", "genericClassNameExpression", "genericList", 
		"genericListElement", "mapEntry", "classModifier", "memberModifier", "argumentList"
	};

	@Override
	public String getGrammarFileName() { return "GroovyParser.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    String currentClassName = null; // Used for correct constructor recognition.

	public GroovyParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class CompilationUnitContext extends ParserRuleContext {
		public List<TerminalNode> NL() { return getTokens(GroovyParser.NL); }
		public List<TerminalNode> SEMICOLON() { return getTokens(GroovyParser.SEMICOLON); }
		public List<EnumDeclarationContext> enumDeclaration() {
			return getRuleContexts(EnumDeclarationContext.class);
		}
		public EnumDeclarationContext enumDeclaration(int i) {
			return getRuleContext(EnumDeclarationContext.class,i);
		}
		public ImportStatementContext importStatement(int i) {
			return getRuleContext(ImportStatementContext.class,i);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode NL(int i) {
			return getToken(GroovyParser.NL, i);
		}
		public List<ImportStatementContext> importStatement() {
			return getRuleContexts(ImportStatementContext.class);
		}
		public PackageDefinitionContext packageDefinition() {
			return getRuleContext(PackageDefinitionContext.class,0);
		}
		public List<ClassDeclarationContext> classDeclaration() {
			return getRuleContexts(ClassDeclarationContext.class);
		}
		public TerminalNode EOF() { return getToken(GroovyParser.EOF, 0); }
		public ClassDeclarationContext classDeclaration(int i) {
			return getRuleContext(ClassDeclarationContext.class,i);
		}
		public TerminalNode SEMICOLON(int i) {
			return getToken(GroovyParser.SEMICOLON, i);
		}
		public TerminalNode SHEBANG_COMMENT() { return getToken(GroovyParser.SHEBANG_COMMENT, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilationUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GroovyParserListener ) ((GroovyParserListener)listener).enterCompilationUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GroovyParserListener ) ((GroovyParserListener)listener).exitCompilationUnit(this);
		}
	}

	public final CompilationUnitContext compilationUnit() throws RecognitionException {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(100); match(SHEBANG_COMMENT);
				}
				break;
			}
			{
			setState(106);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(103); match(NL);
					}
					} 
				}
				setState(108);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
			setState(110);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(109); packageDefinition();
				}
				break;
			}
			setState(115);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(112);
					_la = _input.LA(1);
					if ( !(_la==SEMICOLON || _la==NL) ) {
					_errHandler.recoverInline(this);
					}
					consume();
					}
					} 
				}
				setState(117);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(122);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(120);
					switch (_input.LA(1)) {
					case KW_IMPORT:
					case AT:
						{
						setState(118); importStatement();
						}
						break;
					case NL:
						{
						setState(119); match(NL);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(124);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			setState(128);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(125);
					_la = _input.LA(1);
					if ( !(_la==SEMICOLON || _la==NL) ) {
					_errHandler.recoverInline(this);
					}
					consume();
					}
					} 
				}
				setState(130);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			setState(136);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(134);
					switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
					case 1:
						{
						setState(131); classDeclaration();
						}
						break;

					case 2:
						{
						setState(132); enumDeclaration();
						}
						break;

					case 3:
						{
						setState(133); match(NL);
						}
						break;
					}
					} 
				}
				setState(138);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			setState(143);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(141);
					switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
					case 1:
						{
						setState(139); statement();
						}
						break;

					case 2:
						{
						setState(140); match(NL);
						}
						break;
					}
					} 
				}
				setState(145);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			setState(146); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PackageDefinitionContext extends ParserRuleContext {
		public List<AnnotationClauseContext> annotationClause() {
			return getRuleContexts(AnnotationClauseContext.class);
		}
		public List<TerminalNode> NL() { return getTokens(GroovyParser.NL); }
		public List<TerminalNode> DOT() { return getTokens(GroovyParser.DOT); }
		public TerminalNode KW_PACKAGE() { return getToken(GroovyParser.KW_PACKAGE, 0); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(GroovyParser.IDENTIFIER, i);
		}
		public AnnotationClauseContext annotationClause(int i) {
			return getRuleContext(AnnotationClauseContext.class,i);
		}
		public TerminalNode NL(int i) {
			return getToken(GroovyParser.NL, i);
		}
		public List<TerminalNode> IDENTIFIER() { return getTokens(GroovyParser.IDENTIFIER); }
		public TerminalNode DOT(int i) {
			return getToken(GroovyParser.DOT, i);
		}
		public PackageDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packageDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GroovyParserListener ) ((GroovyParserListener)listener).enterPackageDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GroovyParserListener ) ((GroovyParserListener)listener).exitPackageDefinition(this);
		}
	}

	public final PackageDefinitionContext packageDefinition() throws RecognitionException {
		PackageDefinitionContext _localctx = new PackageDefinitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_packageDefinition);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			_la = _input.LA(1);
			if (_la==AT) {
				{
				setState(148); annotationClause();
				setState(153);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==AT || _la==NL) {
					{
					setState(151);
					switch (_input.LA(1)) {
					case NL:
						{
						setState(149); match(NL);
						}
						break;
					case AT:
						{
						setState(150); annotationClause();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(155);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(158); match(KW_PACKAGE);
			{
			setState(159); match(IDENTIFIER);
			setState(164);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(160); match(DOT);
					setState(161); match(IDENTIFIER);
					}
					} 
				}
				setState(166);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			}
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportStatementContext extends ParserRuleContext {
		public List<AnnotationClauseContext> annotationClause() {
			return getRuleContexts(AnnotationClauseContext.class);
		}
		public List<TerminalNode> NL() { return getTokens(GroovyParser.NL); }
		public List<TerminalNode> DOT() { return getTokens(GroovyParser.DOT); }
		public TerminalNode MULT() { return getToken(GroovyParser.MULT, 0); }
		public TerminalNode KW_IMPORT() { return getToken(GroovyParser.KW_IMPORT, 0); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(GroovyParser.IDENTIFIER, i);
		}
		public AnnotationClauseContext annotationClause(int i) {
			return getRuleContext(AnnotationClauseContext.class,i);
		}
		public TerminalNode NL(int i) {
			return getToken(GroovyParser.NL, i);
		}
		public List<TerminalNode> IDENTIFIER() { return getTokens(GroovyParser.IDENTIFIER); }
		public TerminalNode DOT(int i) {
			return getToken(GroovyParser.DOT, i);
		}
		public ImportStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GroovyParserListener ) ((GroovyParserListener)listener).enterImportStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GroovyParserListener ) ((GroovyParserListener)listener).exitImportStatement(this);
		}
	}

	public final ImportStatementContext importStatement() throws RecognitionException {
		ImportStatementContext _localctx = new ImportStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importStatement);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(175);
			_la = _input.LA(1);
			if (_la==AT) {
				{
				setState(167); annotationClause();
				setState(172);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==AT || _la==NL) {
					{
					setState(170);
					switch (_input.LA(1)) {
					case NL:
						{
						setState(168); match(NL);
						}
						break;
					case AT:
						{
						setState(169); annotationClause();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(174);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(177); match(KW_IMPORT);
			{
			setState(178); match(IDENTIFIER);
			setState(183);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,18,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(179); match(DOT);
					setState(180); match(IDENTIFIER);
					}
					} 
				}
				setState(185);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,18,_ctx);
			}
			setState(188);
			switch ( getInterpreter().adaptivePredict(_input,19,_ctx) ) {
			case 1:
				{
				setState(186); match(DOT);
				setState(187); match(MULT);
				}
				break;
			}
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
